--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".login.view.LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".home.view.HomeActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
