--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
 
     compile 'com.rafakob:floatingedittext:1.0.5'
+    compile 'com.github.jhonnyx2012:horizontal-picker:1.0.5'
 }
 
 
