--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,9 @@ dependencies {
 
 
     compile 'com.rafakob:floatingedittext:1.0.5'
-    compile 'com.github.jhonnyx2012:horizontal-picker:1.0.5'
     compile 'com.google.code.gson:gson:2.8.1'
+
+    compile project(':horizontal-picker')
 }
 
 
