weight page skeleton

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:name=".home.view.HomeActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".weight.view.WeightActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".aliments.view.AlimentsActivity"
             android:screenOrientation="portrait" />
     </application>
